--- a/javascript/effect/parallexEffect_apple.html
+++ b/javascript/effect/parallexEffect_apple.html
@@ -102,7 +102,7 @@
     <section id="section1">
       <div class="sec1">
         <div class="sec1_text1 fixed" data-0="top: 50%; opacity: 1" data-500="top: 30%; opacity: 0">
-          자! 도전, 열정
+          23435463576
         </div>
         <!-- <div class="sec1_text2-1 fixed" data-1000="top: 40%; opacity: 0" data-1200="top: 30%; opacity: 1"
           data-1600="top: 30%; opacity: 1" data-1800="top: 20%; opacity: 0">
@@ -116,10 +116,10 @@
           data-1000="top: 50%; opacity: 1; transform: translate(-50%, -50%) scale(1);"
           data-2600="top: 50%; opacity: 1; transform: translate(-50%, -50%) scale(1);"
           data-3000="top: 50%; opacity: 1; transform: translate(-50%, -50%) scale(0);">
-          거꾸로 하면
+          234435465
           <span data-1000="font-weight: 100;" data-1400="font-weight: 900;" data-1800="font-weight: 100;"
-            data-2200="font-weight: 900;" data-2600="font-weight: 100;">정열</span>
-          전도 자!
+            data-2200="font-weight: 900;" data-2600="font-weight: 100;">12335456</span>
+          122344
         </div>
         <div class="sec1_text3 fixed" data-2900="left: -100%; transform: translate(-50%, -50%) rotate(0deg) scale(1);"
           data-3000="left: 50%; transform: translate(-50%, -50%) rotate(0deg) scale(1);"
