--- a/javascript/effect/mouseEffect05.html
+++ b/javascript/effect/mouseEffect05.html
@@ -2,13 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>마우스 이펙트05</title>
-  <link rel="stylesheet" href="../assets/css/mouse.css" />
-  <link rel="stylesheet" href="../assets/css/dracula.css" />
-  <link href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>마우스 이펙트</title>
+
+  <link rel="stylesheet" href="../assets/css/mouse.css">
+  <link rel="stylesheet" href="../assets/css/dracula.css">
+
+  <link href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css" rel="stylesheet">
+
   <style>
     /* mouseType */
     .mouse__wrap {
@@ -36,13 +39,13 @@
     }
 
     .mouse__img figure::before {
-      content: "";
+      content: '';
       position: absolute;
       left: 5%;
       bottom: -30px;
       width: 90%;
       height: 40px;
-      background: url(../../../assets/slider/effect_bg_07.jpg) center no-repeat;
+      background: url(../assets/img/effect_bg09-min.jpg) center no-repeat;
       background-size: 100% 40px;
       filter: blur(15px) grayscale(50%);
       z-index: -1;
@@ -87,10 +90,10 @@
   </style>
 </head>
 
-<body class="img12">
+<body class="img09 bg01">
   <header id="header">
-    <h1>Javascript Mouse Effect05</h1>
-    <p>마우스 이펙트 - 기울기효과 </p>
+    <h1><a href="mouseEffect.html">Javascript Mouse Effect05</a></h1>
+    <p>마우스 이펙트 - 기울기 효과 / 글씨 반전 효과</p>
     <ul>
       <li><a href="mouseEffect01.html">1</a></li>
       <li><a href="mouseEffect02.html">2</a></li>
@@ -108,21 +111,17 @@
       <div class="mouse__wrap">
         <div class="mouse__img">
           <figure>
-            <img src="../assets/img/effect_bg21.jpg" alt="이미지" />
+            <img src="../assets/img/effect_bg09-min.jpg" alt="이미지">
           </figure>
           <figcaption>
-            <p>
-              <span class="style1">가능</span>해 보이는 것 혹은
-              <span class="style4">타당</span>해 보이는 것만<br />
-              선택한다면 스스로가
-              <span class="style2"> 진정 원하는 것</span>을<br />
-              알 수 없고 <span class="style3">타협</span>만 남는다..
-            </p>
+            <p>Luck is when preparedness meets opportunity</p>
+            <p>운이란 준비가 기회를 만나는 것이다.</p>
           </figcaption>
         </div>
       </div>
     </section>
-    <div class="mouse__Info">
+
+    <div class="mouse__info">
       <ul>
         <li>mousePageX : <span class="mousePageX">0</span>px</li>
         <li>mousePageY : <span class="mousePageY">0</span>px</li>
@@ -135,7 +134,6 @@
       </ul>
     </div>
   </main>
-
   <!-- //main -->
 
   <footer id="footer">
@@ -253,48 +251,38 @@
   <script src="../assets/js/highlight.min.js"></script>
   <script src="../assets/js/common.js"></script>
   <script src="../assets/js/gsap.min.js"></script>
-
   <script>
+
     const mouseMove = (e) => {
-      //마우스 좌표값
+      // 마우스 좌표값
       let mousePageX = e.pageX;
       let mousePageY = e.pageY;
 
-      //마우스 좌표 기준점을 가운데로 변경
-      let centerPageX = window.innerWidth / 2 - mousepageX;
-      let centerPageY = window.innerHeight / 2 - mousepageY;
+      // 마우즈 좌표 기준점을 가운데로 변경
+      let centerPageX = window.innerWidth / 2 - mousePageX;
+      let centerPageY = window.innerHeight / 2 - mousePageY;
 
-      //최소값은 -100 최대값은 100 설정
+      // 쵯소값은 -100 쵯대값은 100 설정
       let maxPageX = Math.max(-200, Math.min(200, centerPageX));
       let maxPageY = Math.max(-200, Math.min(200, centerPageY));
 
-      //각도 줄이는 설정
+      // 각도 줄이는 설정
       let anglePageX = maxPageX * 0.1;
       let anglePageY = maxPageY * 0.1;
 
-      //부드럽게 설정
-      let softPageX = 0;
-      let softPageY = 0;
+      // 부드럽게 설정
+      let softPageX = 0, softPageY = 0;
       softPageX += (anglePageX - softPageX) * 0.4;
       softPageY += (anglePageY - softPageY) * 0.4;
 
-      //이미지움직이기
+      // 이미지 움직이기
       const imgMove = document.querySelector(".mouse__img");
-      imgMove.style.transform =
-        "perspective(600px) rotateX(" +
-        anglePageY +
-        "deg) rotateY(" +
-        anglePageX +
-        "deg)";
+      imgMove.style.transform = "perspective(600px) rotateX(" + softPageY + "deg) rotateY(" + -softPageX + "deg)";
 
-      //커서
-      gsap.to(".mouse__cursor", {
-        duration: 0.3,
-        left: mousePageX - 50,
-        top: mousePageY - 50,
-      });
+      // 커서
+      gsap.to(".mouse__cursor", { duration: .3, left: mousePageX - 50, top: mousePageY - 50 })
 
-      // 마우스 좌표값 출력
+      // 출력
       document.querySelector(".mousePageX").textContent = mousePageX;
       document.querySelector(".mousePageY").textContent = mousePageY;
       document.querySelector(".centerPageX").textContent = centerPageX;
@@ -304,7 +292,9 @@
       document.querySelector(".anglePageX").textContent = Math.round(anglePageX);
       document.querySelector(".anglePageY").textContent = Math.round(anglePageY);
     };
+
     window.addEventListener("mousemove", mouseMove);
+
   </script>
 </body>
 
