--- a/javascript/effect/mouseEffect06.html
+++ b/javascript/effect/mouseEffect06.html
@@ -86,7 +86,7 @@
   </style>
 </head>
 
-<body class="img14 bg01">
+<body class="img05 bg01">
   <header id="header">
     <h1><a href="mouseEffect.html">Javascript Mouse Effect06</a></h1>
     <p>마우스 이펙트 - 텍스트 효과</p>
@@ -107,7 +107,7 @@
       <div class="mouse__wrap">
         <div class="mouse__img">
           <figure>
-            <img src="../assets/img/effect_bg14@2x-min.jpg" alt="">
+            <img src="../assets/img/effect_bg27.jpg" alt="">
           </figure>
         </div>
         <div class="mouse__text">
