--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -401,7 +401,7 @@
     </div>
   </section>
   <footer id="footer">
-    <div class="mail" a href="mailto:" palepinkday@gmail.com">palepinkday@gmail.com</div>
+    <div class="mail" a href="mailto: palepinkday@gmail.com">palepinkday@gmail.com</div>
     <div class="phon"></div>
   </footer>
 
