--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -57,7 +57,7 @@
         </ul>
       </div>
       <div class="keyword">
-        <div class="webstandard" class="site">
+        <div class="webstandard site">
           <a href="#" class="btn-modal">Webstandard</a>
           <span>웹표준 코딩 작업</span>
           <div class="modal">
@@ -89,7 +89,7 @@
             <a href="#" class="close">닫기</a>
           </div>
         </div>
-        <div class="Responsive" class="site">
+        <div class="Responsive site">
           <a href="#" class="btn-modal">Responsive Web</a>
           <span>반응형웹 코딩 작업</span>
           <div class="modal">
@@ -119,7 +119,7 @@
 
 
 
-        <div class="banner_design01" class="design">
+        <div class="banner_design01 design">
           <a href="#" class="btn-modal">Banner Design01</a>
           <span>배너 디자인 작업01</span>
           <div class="modal">
@@ -159,7 +159,7 @@
             </div>
           </div> -->
 
-        <div class="banner_design03" class="design">
+        <div class="banner_design03 design">
           <a href="#" class="btn-modal">Banner Design03</a>
           <span>배너 디자인 작업03</span>
           <div class="modal">
@@ -183,7 +183,7 @@
           </div>
         </div>
 
-        <div class="sns_design" class="design">
+        <div class="sns_design design">
           <a href="#" class="btn-modal">SNS Design</a>
           <span>sns 디자인 작업</span>
           <div class="modal">
@@ -198,7 +198,7 @@
 
 
 
-        <div class="Clone_Coding_Site" class="site">
+        <div class="Clone_Coding_Site site">
           <a href="#" class="btn-modal">Clone Coding Site</a>
           <span>클론 코딩 사이트</span>
           <div class="modal">
@@ -222,7 +222,7 @@
 
 
 
-        <div class="page_design" class="design">
+        <div class="page_design design">
           <a href="#" class="btn-modal">Page Design</a>
           <span>상세페이지 디자인 작업</span>
           <div class="modal">
@@ -239,7 +239,7 @@
           </div>
         </div>
 
-        <div class="figma_website" class="design">
+        <div class="figma_website design">
           <a href="#" class="btn-modal">Figma Website</a>
           <span>웹 페이지디자인 작업</span>
           <div class="modal">
@@ -258,7 +258,7 @@
           </div>
         </div>
 
-        <div class="photoshop_website" class="design">
+        <div class="photoshop_website design">
           <a href="#" class="btn-modal">Photoshop Website Design</a>
           <span>웹 페이지디자인 작업</span>
           <div class="modal">
@@ -280,7 +280,7 @@
           </div>
         </div>
 
-        <div class="Illustrator_icon" class="design">
+        <div class="Illustrator_icon design">
           <a href="#" class="btn-modal">Illustrator Icon</a>
           <span>아이콘 디자인 작업</span>
           <div class="modal">
@@ -300,7 +300,7 @@
           </div>
         </div>
 
-        <div class="parallax_effect" class="javascript">
+        <div class="parallax_effect javascript">
           <a href="#" class="btn-modal">Parallax Effect</a>
           <span>패럴랙스 효과</span>
           <div class="modal">
@@ -325,7 +325,7 @@
           </div>
         </div>
 
-        <div class="slider_effect" class="javascript">
+        <div class="slider_effect javascript">
           <a href="#" class="btn-modal">Slider Effect</a>
           <span>슬라이더 효과</span>
           <div class="modal">
@@ -349,7 +349,7 @@
           </div>
         </div>
 
-        <div class="quiz_effect" class="javascript">
+        <div class="quiz_effect javascript">
           <a href="#" class="btn-modal">Quiz Effect</a>
           <span>퀴즈 효과</span>
           <div class="modal">
@@ -373,7 +373,7 @@
           </div>
         </div>
 
-        <div class="mouse_effect" class="javascript">
+        <div class="mouse_effect javascript">
           <a href="#" class="btn-modal">Mouse Effect</a>
           <span>마우스 효과</span>
           <div class="modal">
