--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -57,7 +57,7 @@
         </ul>
       </div>
       <div class="keyword">
-        <div class="webstandard site">
+        <div class="webstandard sites">
           <a href="#" class="btn-modal">Webstandard</a>
           <span>웹표준 코딩 작업</span>
           <div class="modal">
@@ -89,7 +89,7 @@
             <a href="#" class="close">닫기</a>
           </div>
         </div>
-        <div class="Responsive site">
+        <div class="Responsive sites">
           <a href="#" class="btn-modal">Responsive Web</a>
           <span>반응형웹 코딩 작업</span>
           <div class="modal">
@@ -198,7 +198,7 @@
 
 
 
-        <div class="Clone_Coding_Site site">
+        <div class="Clone_Coding_Site sites">
           <a href="#" class="btn-modal">Clone Coding Site</a>
           <span>클론 코딩 사이트</span>
           <div class="modal">
@@ -412,8 +412,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
   $(".title > ul > li").click(function (e) {
+
     e.preventDefault();
-    let text = $(this).text();
+    let text = $(this).text().toLowerCase();
+    // alert(text)
     $(".keyword > div").removeClass("up");
     if ($(".keyword > div").hasClass(text)) {
       $("." + text).addClass("up");
