--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -272,7 +272,7 @@
                 패밀리레스토랑 사이트를 디자인했습니다. 상단에 로고와 메뉴를
                 배치해 사용자가 한눈에 원하는 목록으로 이용이 용이하게 하였고
                 헤더하단에 이미지아이콘을 배치해 다시 이동을 원활하게
-                만들었습니다.이미지와 배너중심으로 한눈에 사이트내용을
+                만들었습니다.이미지와 배너중심으로 한눈에 사이트내용을 파악 할 수 있게 만들었습니다.
               </div>
               </div>
               <a href="#" class="close">닫기</a>
@@ -419,7 +419,7 @@
 
 <script>
   $(".title > ul > li").click(function (e) {
-   alert(ggg)
+  //  alert(ddd)
     e.preventDefault();
     let text = $(this).text().toLowerCase();
     // alert(text)
