--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -233,6 +233,10 @@
                   src="img/cosmetic.jpg"
                   alt="상세페이지" />
               </div>
+               <div class="left">
+                  <img src="img/가전.jpg" alt="상세페이지">
+              </div>
+             
               </div>
               <a href="#" class="close">닫기</a>
           </div>
